# cookiecutter-omero-webapp

./: README.md  cookiecutter.json
.github/workflows/: build.yml
{{cookiecutter.repo_name}}/: .gitignore  MANIFEST.in  README.md  config.omero  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: omero_plugin.yml  publish_pypi.yml
{{cookiecutter.repo_name}}/test/integration/: test_index.py
{{cookiecutter.repo_name}}/{{cookiecutter.webapp_name}}/: __init__.py  urls.py  views.py
{{cookiecutter.repo_name}}/{{cookiecutter.webapp_name}}/static/{{cookiecutter.webapp_name}}/: app.js
{{cookiecutter.repo_name}}/{{cookiecutter.webapp_name}}/templates/{{cookiecutter.webapp_name}}/: index.html
